# longevity-agents

./: .gitignore  LICENSE  README.md  api.py  pyproject.toml  requirements.txt
base_agent/: a_stream_agent.py  async_agent.py  prompt_template.py
configs/: config.py  config_cls.py
customized_agent/bryan_johnson_chatbot/: config.py  prompt_template.py  task.py
customized_agent/bryan_johnson_chatbot/assets/: bad_habits.txt  daily_routine.txt  eat.txt  exercise.txt  females.txt  introduction.txt  pregnancy.txt  protocol.txt  sleep.txt
customized_agent/data_analyzer/: config.py  prompt_template.py  task.py
customized_agent/data_analyzer/assets/: diagno_category.db  diagno_category.json
customized_agent/duplication_verifier/: config.yaml  prompt_template.py  task.py
customized_agent/longevity_paper/: config.py  prompt_template.py  task.py
customized_agent/peter_attia_chatbot/: config.py  prompt_template.py  task.py
customized_agent/peter_attia_chatbot/assets/: exercise.txt  longevity.txt  medications.txt  mental.txt  nutrition.txt  risks.txt  sleep.txt  treatments.txt
module/scheculer/: task_manager.py
module/toolkit/: ai_tools.py  verify_coin.py
module/toolkit/market_history/binance/: collector.py  config.toml
module/toolkit/retrieval/: config.yaml  retrieve.py
module/toolkit/retrieval/paper/: config.py  retrieve.py
module/toolkit/search_tools/: serp_api.py  tavily_search.py
module/toolkit/search_tools/searx_search/: config.yaml  searx.py
utils/: config_wrapper.py  file_convert.py  helpers.py  logger.py  retrieve.py  symbol_trans.py
utils/storage/: __init__.py  elasticsearch.py  ipfs.py  milvus.py  mimio.py  minio_storage.py  mongodb.py  mysql.py  shelve_storage.py
views/: bryan_chatbot.py  chatbot.py  data_analyzer.py  data_cls.py  paper_chatbot.py  peter_chatbot.py  schema.py
