[project]
name = "longevity-agents"
version = "0.1.0"
description = "A Multi-Agent Framework for Personalized Health & Longevity Insights"
authors = [
    {name = "Louis Jin",email = "lululouisjin@gmail.com"}
]
license = {text = "MIT license"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.110.2)",
    "openai (>=1.23.2)",
    "pydantic (>=2.7.0,<3.0.0)",
    "pydantic-settings (>=2.2.1,<3.0.0)",
    "python-dotenv (==1.0.1)",
    "pyyaml (>=6.0.1)",
    "requests (==2.31.0)",
    "uvicorn (==0.29.0)",
    "levenshtein (==0.25.1)",
    "pymongo (==4.6.2)",
    "aiohttp (==3.10.5)",
    "hjson (==3.1.0)",
    "lxml (==5.3.0)",
    "numpy (==2.1.1)",
    "aiofiles (==24.1.0)",
    "toml (==0.10.2)",
    "loguru (==0.7.2)",
    "elasticsearch (==8.15.1)",
    "pymilvus (==2.4.0)",
    "minio (>=7.2.15,<8.0.0)",
    "serpapi (>=0.1.5,<0.2.0)",
    "fuzzywuzzy (>=0.18.0)",
    "python-dotenv (>=1.0.1)",
    "pandas (>=2.2.3)",
    "watchdog (>=6.0.0)",
    "img2pdf (>=0.6.0,<0.7.0)",
    "json5 (>=0.12.0,<0.13.0)",
]


[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
